--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"sass": "^1.68.0"
 	},
 	"devDependencies": {
+		"@types/css-modules": "^1.0.3",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
